Vetical aligning the li markers - correcting spacing

--- a/css/reads.css
+++ b/css/reads.css
@@ -33,6 +33,7 @@ ol {
 li::before {
   counter-increment: list-counter; /* Increment counter for each <li> */
   content: counter(list-counter) "."; /* Display the counter followed by a dot */
+  margin-right: 3rem;
   width: 2rem; /* Set a fixed width to align numbers */
   text-align: right; /* Right-align the numbers within the width */
   display: inline-block; /* Ensure width and alignment work */
@@ -139,10 +140,6 @@ hr {
   #month_image {
     width: 5rem;
   }
-
-  li::before {
-    margin-right: 3rem; /* Space between number and text */
-  }
 }
 
 /********** Large devices only **********/
@@ -184,7 +181,7 @@ hr {
     margin-right: 5%;
   }
   li::before {
-    margin-right: 2rem; /* Space between number and text */
+    margin-right: 1.75rem; /* Space between number and text */
   }
 }
 /********** Small devices only **********/
